PUL-86 [Issue #2 - part 2] - make student page navigation buttons more visible

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,9 +21,6 @@ html,
   height: 100%;
   background-color: #f8f9fa !important;
 }
-.active {
-  background: skyblue;
-}
 #root {
   display: flex;
   flex-direction: column;
